# BillBoard

./: CLAUDE.md  README.md  start.bat  start.sh
backend/: .env  .gitignore  README.md  database.py  jobs.py  main.py  models.py  pyproject.toml
backend/agents/: agent.md  bill_guy.py
backend/agents/harness/: context.json  conventions.md  progress.md
backend/agents/hooks/: post_tool_use.py  pre_tool_use.py
backend/agents/skills/query_bills/: SKILL.md  example.sql
backend/agents/subagents/: code_reader.md  code_reader.py  db_reader.md  db_reader.py
backend/routers/: bills.py  groups.py  jobs.py  recurrent.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/agents/: bill_guy.md
frontend/agents/harness/: context.json  conventions.md  progress.md
frontend/agents/skills/: SKILL.md  component_guide.md
frontend/agents/skills/examples/: feature.example.md  store.example.md
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/features/bills/: index.ts
frontend/src/features/bills/components/: BillCard.tsx  BillFilters.tsx  BillForm.tsx  BillList.tsx  BillStats.tsx  BillsPage.tsx
frontend/src/features/bills/hooks/: useBillsQuery.ts  (+1 more)
frontend/src/features/groups/: index.ts  store.ts
frontend/src/services/: bills.service.ts  groups.service.ts  http.ts  jobs.service.ts  recurrent.service.ts
frontend/src/shared/interfaces/: IBill.ts  IBillPayload.ts  IRecurrent.ts  IRecurrentPayload.ts
frontend/src/shared/types/: IBill.ts  IBillPayload.ts  IGroup.ts  IGroupPayload.ts  TFrequency.ts
(+6 files in other folders)
